完成多语言插件功能扩充
新增文字直接翻译功能，支持文字动态翻译，弥补数据子集翻译完全问题

--- a/src/LayUI.Wpf.Extensions.App/LayUI.Wpf.Extensions.App.csproj
+++ b/src/LayUI.Wpf.Extensions.App/LayUI.Wpf.Extensions.App.csproj
@@ -5,6 +5,17 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <Page Remove="languages\en_US.xaml" />
+    <Page Remove="languages\zh_CN.xaml" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LayUI.Wpf.Extensions\LayUI.Wpf.Extensions.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="languages\en_US.xaml" />
+    <Resource Include="languages\zh_CN.xaml" />
   </ItemGroup>
 </Project>
