--- a/src/LayUI.Wpf.Extensions.App/LayUI.Wpf.Extensions.App.csproj
+++ b/src/LayUI.Wpf.Extensions.App/LayUI.Wpf.Extensions.App.csproj
@@ -9,6 +9,7 @@
     <Page Remove="languages\zh_CN.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LayUI.Wpf" Version="1.0.2.240407" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
