--- a/src/LayUI.Wpf.Extensions/LayUI.Wpf.Extensions.csproj
+++ b/src/LayUI.Wpf.Extensions/LayUI.Wpf.Extensions.csproj
@@ -7,6 +7,10 @@
 		<Description>这是一款WPF版Layui库扩展类</Description>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
+		<Authors>wenke</Authors>
+		<Copyright>该目标相关的库归Coolkeke（wenke）所有，如若采用本库相关的代码请标记说明</Copyright>
+		<PackageProjectUrl>https://www.nuget.org/packages/LayUI.Wpf.Extensions</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Coolkeke/LayUI.Wpf.Extensions</RepositoryUrl>
 	</PropertyGroup>
 
 </Project>
